--- a/_sass/1linelayout.scss
+++ b/_sass/1linelayout.scss
@@ -300,3 +300,38 @@
   border-radius: 8px;
   background-color: lightseagreen;
 }
+
+// example 9: clamp style
+.ex9 {
+  display: grid;
+  place-items: center;
+  color: darkslategray;
+  margin-bottom: 15px;
+}
+.parent9 {
+  display: grid;
+  place-items: center;
+  width: 350px;
+  height: 320px;
+  background-color: lightseagreen;
+  padding: 1rem;
+  border: 1px dashed lightpink;
+  border-radius: 5px;
+  resize: both;
+  overflow: auto;
+}
+.card-template2 {
+  display: flex;
+  flex-direction: column;
+  // set width to be 23ch <= w <= 46ch
+  width: clamp(16ch, 70%, 46ch);
+  padding: 1rem;
+  background-color: lightyellow;
+  border-radius: 10px;
+}
+.card-pic2 {
+  background-color: lightcoral;
+  margin: 0.5rem 0 0 0;
+  // now supports chrome and firefox, not safari...
+  aspect-ratio: 16 / 9;
+}
